# cogtainer

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: advanced_test.rs  api_test.rs  basic_api.rs  defrag_test.rs  error.rs  file_test.rs  internal_file.rs  lib.rs  power_api.rs  traits.rs  worksheet_file.rs
src/container_file/: footer.rs  header.rs  mod.rs  overallocation.rs
src/tests/: advanced_test.rs  defrag_test.rs  internal_file.rs  mod.rs
