[package]
name = "cogtainer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["full"]
full = ["flate2", "rmp-serde"]

[dev-dependencies]
rand = "0.9"

[dependencies]
thiserror = "2"

# futures = { workspace = true }

serde = { version = "1.0", features = ["derive"] }

rmpv = { version = "1.3", features = ["with-serde"] }

twox-hash = "2.1.1"
rmp-serde = { version = "1.1", optional = true }
flate2 = { version = "1.1.2", features = [
    "zlib-rs",
], default-features = false, optional = true }
